# pasinisamuele.github.io

./: .gitignore  404.html  _config.yml  feed.xml  index.html  pyproject.toml  robots.txt  sitemap.xml
_bibliography/: papers.bib
_data/: courses.yml  repositories.yml  theses.yml
_includes/cv/: time_table_thesis.liquid
_layouts/: about.liquid  bib.liquid  cv.liquid  teaching.liquid
_moments/: acdl24.md  ated4kids25.md  barbengo24.md  fse25.md  icse2026.md  phaenomena.md  prospectus.md  sportech2025.md  universo2025.md
_news/: acdl_2024.md  alumni_2025.md  ated4kids_2025.md  aws_summit_23.md  bachelors_degree.md  barbengo_24.md  cross_jss.md  evaluating_emse.md  fse_2025.md  icse_2026.md  icse_journal_first.md  masters_degree.md  mindearth.md  phaenomena_dietikon.md  phd_start.md  prospectus.md  pytorch_professionai.md  sportech_2025.md  thesis.md  universo_2025.md  wsod_survey_published.md
_pages/: about.md  blog.md  cv.md  dropdown.md  moments.md  projects.md  repositories.md  teaching.md
_pages/dropdown/: index.html
_posts/: 2022-10-18-mosaicing.md  2022-11-27-cycle.md  2022-12-15-master_thesis.md  2023-10-18-startup_experience.md  2023-12-28-back_to_university.md  2024-01-15-NIST_paper.md
_projects/: LLM_research_assistant.md  face_da.md  illegal_landfills.md  image_mosaicing.md  time_series.md
_sass/: _base.scss  _themes.scss
assets/css/: bootstrap.min.css  main.css  (+1 more)
blog/: index.html
cv/: index.html
moments/: index.html
news/: index.html
projects/: index.html
publications/: index.html
repositories/: index.html
teaching/: index.html
(+114 files in other folders)
