[tool.poetry]
name = "pasinisamuele-github-io"
version = "0.1.0"
description = ""
authors = ["PasiniSamuele"]
readme = "README.md"
packages = [{include = "pasinisamuele"}]

[tool.poetry.dependencies]
python = "^3.12"
jupyter = "^1.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
